k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-order-frontend-ingress
  namespace: cloud-order-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Frontend - sve što nije /api/*
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
